<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true"
            app:summary="jdklasjdklaj"/>

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Ana">

        <SwitchPreferenceCompat
            app:key="reproducirMusica"
            app:summaryOff="No escuchar la música mientras se ejecuta la aplicación"
            app:summaryOn="Escuchar la música mientras se ejecuta la aplicación"
            app:title="Música" />
        <EditTextPreference
            app:key="nick"
            app:title="Nick por defecto"
            app:summary="Introduzca su nick por defecto"
            app:dialogTitle="Nick por defecto" />
        <ListPreference
            app:key="pais"
            app:title="País de residencia"
            app:useSimpleSummaryProvider="true"
            app:dialogTitle="Indicar País donde vives"
            app:entries="@array/pais"
            app:entryValues="@array/codigopais" />
        <MultiSelectListPreference
            app:key="paisesVisitados"
            app:title="Países visitados"
            app:summary="Lista de países visitados"
            app:dialogTitle="Indicar Países que se ha visitado"
            app:entries="@array/pais"
            app:entryValues="@array/codigopais" />


    </PreferenceCategory>

</PreferenceScreen>